# two-wrongs

./: .gitignore  Application.hs  Foundation.hs  Model.hs  devel.hs  stack.yaml  two-wrongs.cabal
Handler/: Site.hs
config/: keter.yml  models  postgresql.yml.example  routes  settings.yml
deploy/: Procfile
templates/: about.hamlet  about.lucius  article_list.hamlet  authors.hamlet  base.hamlet  detail.hamlet  entryform.hamlet  entryform.julius  homepage.hamlet  login.hamlet  navigation.hamlet  standard.hamlet  standard.julius  standard.lucius
