name:              two-wrongs
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Site

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4
                 , yesod                         >= 1.4.0
                 , yesod-core                    >= 1.4.0
                 , yesod-auth                    >= 1.4.0
                 , yesod-auth-oauth2             >= 0.0.10
                 , yesod-static                  >= 1.4.0
                 , yesod-form                    >= 1.4.0
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , persistent                    >= 2.0
                 , persistent-postgresql         >= 2.0
                 , persistent-template           >= 2.0
                 , esqueleto
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 3.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.2
                 , wai-logger                    >= 2.2
                 , time

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         two-wrongs
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , two-wrongs
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

